added extra explanation to index.html in foo

--- a/example-site/foo/index.html
+++ b/example-site/foo/index.html
@@ -17,7 +17,8 @@
 		<h1>Welcome to a Dragonfly test page!</h1>
 		<p>
 			Here we're testing what happens when you point the browser
-			to a URL like <b>http://mysite.com/foo</b>!
+			to a URL like <b>http://mysite.com/foo</b>, where "foo" is
+			a real directory (as opposed to a view or resource).
 		</p>
 		<div class="line-dotted"></div>
 
