- implemented route for twitter-like RESTful resources - got rid of 'with-wrapped-print'. 'print' and 'println' are now globally remapped. - rearranged a bunch of code and updated code comments - added demo for 'wings' resource (not linked to from example-site though) - added artfulcode's json stuff and created an artful code folder under plugins-inactive - added an 'activate-plugin' function to selectively load inactive plugins as needed. - added 'include' function to provide method of including files without passing them through the template evaluator. - added a 'die' function to combine error 500 + log-err into one step.
--HG--
rename : example-site/dragonfly-framework/plugins-inactive/web.lsp => example-site/dragonfly-framework/plugins-inactive/artfulcode/web.lsp

--- a/example-site/foo/index.html
+++ b/example-site/foo/index.html
@@ -20,6 +20,11 @@
 			to a URL like <b>http://mysite.com/foo</b>, where "foo" is
 			a real directory (as opposed to a view or resource).
 		</p>
+		<p>
+			Value of cookie "foo" (reload page if nil): <%=($COOKIES "foo")%>
+			
+			<% (Response:cookie "foo" (amb "foo" "bar" "baz")) %>
+		</p>
 		<div class="line-dotted"></div>
 
 		<% (benchmark-result) %>
