moved dragonfly-newlisp/dragonfly-framework/docs into dragonfly-newlisp/api-docs
--HG--
rename : example-site/dragonfly-framework/docs/dragonfly.lsp.html => api-docs/dragonfly.lsp.html
rename : example-site/dragonfly-framework/docs/index.html => api-docs/index.html
rename : example-site/dragonfly-framework/docs/log.lsp.html => api-docs/log.lsp.html
rename : example-site/dragonfly-framework/docs/request.lsp.html => api-docs/request.lsp.html
rename : example-site/dragonfly-framework/docs/response.lsp.html => api-docs/response.lsp.html
rename : example-site/dragonfly-framework/docs/utils.lsp.html => api-docs/utils.lsp.html

--- a/api-docs/dragonfly.lsp.html
+++ b/api-docs/dragonfly.lsp.html
@@ -13,7 +13,7 @@
 <center><h1>dragonfly.lsp</h1></center>
 <p><a href="index.html">Module index</a></p><br/><br/><br/><h2>Module:&nbsp;dragonfly.lsp</h2><p>The heart of Dragonfly - A newLISP web framework for rapid web development.</p>
 <b>Version: </b>0.50<br/>
-<b>Author: </b>Greg Slepak, Marc Hildmann (Team Dragonfly 2009)<br/>
+<b>Author: </b>Team Dragonfly 2009<br/>
 <b>Location: </b><a href="http://code.google.com/p/dragonfly-newlisp/">http://code.google.com/p/dragonfly-newlisp/</a><br/>
  <br>This file is the main entry-point of the Dragonfly framework and
  contains several important functions, as well as the default route
