--- a/example-site/foo/index.html
+++ b/example-site/foo/index.html
@@ -1,6 +1,8 @@
 <% (setf viewname "Foo Static Page") %>
 <% (display-partial "doctype") %>
-<% (display-partial "header") %>
+<head>
+	<% (display-partial "header") %>
+</head>
 
 <body>
 
