more doc updates

--- a/example-site/foo/index.html
+++ b/example-site/foo/index.html
@@ -21,7 +21,7 @@
 		<p>
 			Here we're testing what happens when you point the browser
 			to a URL like <b>http://mysite.com/foo</b>, where "foo" is
-			a real directory (as opposed to a view or resource).
+			a real directory containing an index.html file (as opposed to a view or resource).
 		</p>
 		<p>
 			Value of cookie "foo" (reload page if nil): <%=($COOKIES "foo")%>
