compensated for a newLISP bug in 'read-buffer'. now  can handle large data. Documented MAX_POST_LENGTH

--- a/example-site/dragonfly-api/request.lsp.html
+++ b/example-site/dragonfly-api/request.lsp.html
@@ -62,6 +62,14 @@
 
 
 
+<br/><br/><center>- &sect; -</center><br/>
+<a name="_MAX_POST_LENGTH"></a><h3><font color=#CC0000>MAX_POST_LENGTH</font></h3>
+<b>syntax: MAX_POST_LENGTH</b><br/>
+ <p>A constant global integer whose value by default is <tt>1048576</tt>. This represents
+ the maximum amount of binary data (in bytes) that can be sent in the body of the
+ request (which gets stored in <tt>$BINARY</tt>).</p>
+ <p>Minimum value is <tt>8192</tt>. Set this value prior to the loading of this file
+ (for example in <tt>config.lsp</tt>) to customize it.</p>
 
 
 
