improved api stuff through resources/api.lsp
--HG--
rename : example-site/dragonfly-api/DF.DB/database.lsp.html => example-site/dragonfly-api/db/database.lsp.html
rename : example-site/dragonfly-api/DF.DB/database_sqlite3.lsp.html => example-site/dragonfly-api/db/database_sqlite3.lsp.html
rename : example-site/dragonfly-api/DF.DB/index.html => example-site/dragonfly-api/db/index.html

--- a/example-site/dragonfly-api/ObjNL.lsp.html
+++ b/example-site/dragonfly-api/ObjNL.lsp.html
@@ -11,7 +11,7 @@
 			link="#376590" vlink="#551A8B" alink="#ffAA28">
 <blockquote>
 <center><h1>ObjNL.lsp</h1></center>
-<p><a href="index.html">Module index</a></p><br/><br/><br/><h2>Module:&nbsp;ObjNL.lsp</h2><p>Objective newLISP - Real Object Oriented Programming for newLISP</p>
+<p><a href="index.html">Module index</a></p><br/><h2>Module:&nbsp;ObjNL.lsp</h2><p>Objective newLISP - Real Object Oriented Programming for newLISP</p>
 <b>Version: </b>1.0<br/>
 <b>Author: </b>Greg Slepak<br/>
 <b>Location: </b><a href="http://www.taoeffect.com/newlisp/ObjNL.lsp.txt">http://www.taoeffect.com/newlisp/ObjNL.lsp.txt</a><br/>
