--- a/example-site/dragonfly-api/log.lsp.html
+++ b/example-site/dragonfly-api/log.lsp.html
@@ -11,7 +11,7 @@
 			link="#376590" vlink="#551A8B" alink="#ffAA28">
 <blockquote>
 <center><h1>log.lsp</h1></center>
-<p><a href="index.html">Module index</a></p><br/><br/><br/><h2>Module:&nbsp;log.lsp</h2><p>Provides convenient logging facility for all of Dragonfly.</p>
+<p><a href="index.html">Module index</a></p><br/><h2>Module:&nbsp;log.lsp</h2><p>Provides convenient logging facility for all of Dragonfly.</p>
 <b>Author: </b>Greg Slepak<br/>
  <p>To avoid checking the value of <tt>Dragonfly:LOG_LEVEL</tt> each time something is logged
  the logging functions that correspond to a lower logging level are disabled
