--- a/example-site/dragonfly-api/request.lsp.html
+++ b/example-site/dragonfly-api/request.lsp.html
@@ -12,7 +12,7 @@
 <blockquote>
 <center><h1>request.lsp</h1></center>
 <p><a href="index.html">Module index</a></p>
-<br/><br/><br/><h2>Module:&nbsp;request.lsp</h2><b>Author: </b>Greg Slepak <greg at taoeffect.com><br/>
+<br/><h2>Module:&nbsp;request.lsp</h2><b>Author: </b>Greg Slepak <greg at taoeffect.com><br/>
  <h3>$GET/$POST</h3>
  These are very similar to the PHP $_GET and $_POST associative arrays.
  Use them to retrieve the GET/POST values.
