--- a/example-site/dragonfly-api/response.lsp.html
+++ b/example-site/dragonfly-api/response.lsp.html
@@ -11,7 +11,7 @@
 			link="#376590" vlink="#551A8B" alink="#ffAA28">
 <blockquote>
 <center><h1>response.lsp</h1></center>
-<p><a href="index.html">Module index</a></p><br/><br/><br/><h2>Module:&nbsp;response.lsp</h2><b>Author: </b>Greg Slepak<br/>
+<p><a href="index.html">Module index</a></p><br/><h2>Module:&nbsp;response.lsp</h2><b>Author: </b>Greg Slepak<br/>
 
 
 
